--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.64.3",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
+    "react-native-dropdown-picker": "^5.4.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1"
