--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-bar-chart": "^0.1.0",
     "react-native-date-picker": "^4.2.6",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdown-picker": "^5.4.3",
